--- a/Frontend/WorldInPocket/src/index.html
+++ b/Frontend/WorldInPocket/src/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>WordInPocket</title>
+  <title>WorldInPocket</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
+
+  <script src="https://www.paypal.com/sdk/js?client-id=AYZ6msQyzIsffWyQJHNk0yQeKE40ks5-HJN5dcl9vc43FU-fUhax0FR7jWmn8JTjxBBKAY52QmiJrp66"></script>
 </body>
 </html>
