aggiustamenti grafici più implementazione pagamento paypal

--- a/Frontend/WorldInPocket/src/index.html
+++ b/Frontend/WorldInPocket/src/index.html
@@ -10,6 +10,6 @@
 <body>
   <app-root></app-root>
 
-  <script src="https://www.paypal.com/sdk/js?client-id=AeeVW41pfJKfxUfMvZvCVai_cVFB1_mQc5ew6KcCLzqEwYS_zJM8BGkOX7lRdK0T9crgh1ZE8bmdBaST"></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=AeeVW41pfJKfxUfMvZvCVai_cVFB1_mQc5ew6KcCLzqEwYS_zJM8BGkOX7lRdK0T9crgh1ZE8bmdBaST&currency=EUR&locale=it_IT"></script>
 </body>
 </html>
